dashboard_builder/static/dashboard_builder/css/dashboard_builder_css.css
#cke_editor1 .cke_contents{
    height: 350px !important;
}

.modal-content{
    height: 93vh;
    overflow: auto;
}

#myModal .nav-pills > li.active a{
    background-color: #30526a !important;
}

#myModal .nav>li {
    display: inline-block !important;
    width: 40% !important;
}
#myModal .nav-pills>li {
    float: none !important;
}
#myModal .nav-pills>li a{
    background-color: rgba(219, 219, 219, 0.9);
}
#myModal .nav-pills>li a:hover {
    float: none !important;
    background-color: #b6b6b6;
}

.loadingFrame{position:absolute;z-index:999;display:none;right:0;left:0;bottom:0;top:0;background:#fff;text-align:center;border:thin dashed;}
.viz_item{
    cursor: pointer;
    font-size: 10.5pt;
}
#loadImg {
    position: absolute;
    z-index: 999;
}

#loadImg {
    display: table-cell;
    width: 100%;
    height: 300px;
    background: #fff;
    text-align: center;
    vertical-align: middle;
}

.popover {
    width: 500px;
    max-width: 600px;
    min-height: 230px;
}

.popover-content {
    width: 100%;
}

.modal-header {
    padding-top: 16px !important;
    padding-left: 0px !important;
    padding-right: 0px !important;
}

.modal .modal-content .modal-body {
    height: 80vh;
    overflow-y: auto;
    padding: 0 24px 0 24px;
}

.modal .modal-dialog {
    margin-top: 5px;
    padding-top: 0;
    padding-bottom: 5px;
    width: 90%;
}

#viz_container {
    background-color: #d8d8d8;
    height:560px;
    width: 80%;
    padding: 0;
    position: relative;
}

#viz_container iframe, #dynamic_dashboard iframe {
    background-color: darkgray;
    width: 100%;
    margin: 0;
    padding: 0;
}

/*{#Dashboard Additions#}*/
.gridster .gridster-item {
    -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
    -moz-box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
    box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
    color: #004756;
    background: white;
    padding: 0px;
}
ul {
    list-style: none;
}

.wrap1{
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    z-index: 100000;
    opacity: 0;
    display: none;
}

.deletebtn{
    position: absolute;
    right: 0;
    top: 0;
    background-color: transparent;
    height: 37px;
    border: none;
    color: white;
    width: 30px;
}

.deletebtn:hover{
    background-color: #9e0000;
    cursor: pointer;
}

.iframeHeader{
    height: 37px;
    width: 100%;
    background-color: #30526a;
    text-align: center;
}

.iframeHeader .form-group.is-focused .form-control{
    background-image: linear-gradient(#D2D2D2, #D2D2D2), linear-gradient(#D2D2D2, #D2D2D2);
}

.iframeHeader:hover{
    cursor: pointer;
}

.iframe-class{
    height: calc(100% - 37px);
    padding: 0px;
    margin: 0% 0% 0% 0% !important;
}
#myModal .iframe-class{
    height: 100%;
}

.iframeHeader .form-group{
    margin: 0px 0px 0px 0px !important;
}

.iframeHeader .form-group .form-control{
    color: #FFFFFF;
    min-width: 70%;
}

#scroll_down_area{
    display: none;
    width: 100%;
    height: 30%;
    position: absolute;
    bottom: 0;
    z-index: 100000;
    opacity: 100;
    display: none;

}

.modal-tab{
    width:50%;
    height: 30px;
    background-color: #979a9a;
    color: white;
    float: left;
    box-shadow: 0px -1px 5px grey;
    border-bottom: 1px solid black;
}

.modal-tab:hover{
    cursor: pointer;
}


.note_wrapper{
    padding: 10px;
    width: 100%;
    height: calc(100% - 37px);
    overflow: auto;

}
.disabled {
    pointer-events:none;
    opacity:0.6;
}

.unclickable{
    text-decoration: none;
    pointer-events:none;
}

.unclickable:hover{
    cursor: not-allowed;
}

.viz_item:hover {
    background-color: #d4dbe9;
}

.form_field_info{
    pointer-events: auto!important;
}
.form_field_info:hover {
    cursor: help;
    color: rgb(45, 45, 45)!important;
}

.ng-wrapper{
            width: 100%;
            height: calc(100%);
            display: block;
        }

